# Multi-Modal-Synchronisation-Workbench

./: .gitignore  README.md  environment.yaml  ingest.bat  inspect_tables.ipynb  map_nearest_rgb_to_pc.bat  pyproject.toml  v0.1_notes.md
docs/architecture/: 01_main_context_file.md  03_workflows_and_usage.md
docs/v0.0/: 02_data_model_and_tables.md  04_open_questions_and_future_changes.md
docs/v0.0/architecture/er/logical/: sync_workbench_er_V0.1.mmd
docs/v0.1/: frontend_backend_boundary.mmd  ingestion_workflow.mmd
docs/v0.1/architecture/: architecture_overview.md  er_diagram.mmd
src/sync_workbench/: __init__.py
src/sync_workbench/assets/: asset_refs.py  asset_resolver.py  roots_config.py
src/sync_workbench/cli/: main.py
src/sync_workbench/core/: enums.py  ids.py  tables.py  time_utils.py  validation.py
src/sync_workbench/ingestion/: temp_package.py  temp_to_canonical.py  validators.py
src/sync_workbench/services/: ingestion_service.py  mapping_service.py
src/sync_workbench/storage/: core_store.py  parquet_export.py  sqlite_store.py
src/sync_workbench/sync/: mapping.py
tests/: test_asset_refs.py  test_v0_1_pipeline.py
