[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sync-workbench"
version = "0.1.0"
description = "Backend-first v0.1 for the Multi-modal Synchronisation Workbench"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "PyYAML>=6.0",
  "zstandard>=0.22",
  "tabulate>=0.9",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14"]
dev = ["pytest>=7", "pyarrow>=14", "zstandard>=0.22", "tabulate>=0.9"]

notebook = [
  "jupyterlab>=4",
  "notebook>=7",
  "ipykernel>=6",
  "ipywidgets>=8",
]

[project.scripts]
syncwb = "sync_workbench.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
